# SENTINEL

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
conf/: config.yaml  config_b200.yaml  config_b200_evo.yaml  config_warmup.yaml
conf/model/: deepseek_r1_distill_14b.yaml  llama3_1_8b.yaml  llama3_3_70b.yaml  mistral_small.yaml  mistral_small_24b.yaml  phi4_14b.yaml  qwen3_14b.yaml  qwen3_32b.yaml
docs/: 01-architecture-and-design.md  02-troubleshooting.md  03-b200-runbook.md  03-multi-gpu-runbook.md
experiments/: smoke_test_pipeline.py
scripts/: colab_setup.sh  setup.sh  setup_a100_cuda128.sh
src/sentinel/: __init__.py  agent.py  aggregate.py  cli.py  experiment.py  launcher.py  pipeline.py
src/sentinel/core/: __init__.py  invariants.py  logging.py  manifest.py  seeding.py  types.py
src/sentinel/corpora/: __init__.py  loaders.py
src/sentinel/defenses/: __init__.py  modules.py
src/sentinel/eval/: __init__.py  conditions.py  detection.py  grids.py  oracles.py  robustness.py
src/sentinel/evolution/: __init__.py  engine.py  fitness.py  genome.py  human_gate.py  map_elites.py  nsga2.py
src/sentinel/graph/: __init__.py  threat_graph.py
src/sentinel/meta_defense/: __init__.py  bandit.py
src/sentinel/metrics/: __init__.py  catalog.py
src/sentinel/models/: __init__.py  autotune.py  backend.py  compat.py  encoder.py
src/sentinel/sentinel_layer/: __init__.py  anomaly_screen.py  cascade.py  (+3 more)
tests/: conftest.py  test_anomaly_screen.py  test_backend_compat.py  test_bandit_graph_metrics.py  test_evolution_engine.py  test_invariants.py  test_nsga2_fitness.py  test_parallel_aggregate.py  test_pipeline_e2e.py  test_rule_screen.py  test_stats.py
(+6 files in other folders)
