[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sentinel-ai-security"
version = "0.1.0"
description = "SENTINEL — Self-Evolving Neural Threat Intelligence (defensive-only, self-hardening agent)"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [{ name = "Sibi Gokul" }]
keywords = ["agent-security", "prompt-injection-defense", "adaptive-defense", "owasp", "self-hardening"]

# Real architecture only. GPU serving (vLLM) + real transformer encoders are first-class
# dependencies, not optional extras. The system targets a CUDA A100.
dependencies = [
    "torch>=2.2",
    "vllm>=0.4.2",
    "transformers>=4.40",
    "sentence-transformers>=2.6",
    "accelerate>=0.29",
    "pydantic>=2.6",
    "numpy>=1.26",
    "scipy>=1.12",
    "scikit-learn>=1.4",
    "statsmodels>=0.14",
    "hnswlib>=0.8",
    "networkx>=3.2",
    "matplotlib>=3.8",
    "structlog>=24.1",
    "omegaconf>=2.3",
    "hydra-core>=1.3",
    "rich>=13.7",
    "tqdm>=4.66",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.9",
    "hypothesis>=6.100",
]

[project.scripts]
sentinel = "sentinel.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-q"
